feat: drop the jamm agent from the surefire setup